Страница 0.4.5 (brunch build)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
 </head>
 <body>
-  <div class="section start">
+  <div id="section-start" class="section start">
     <div class="container">
       <div class="logo"><img src="../pics/section.start.logo.png"></div>
       <div class="menu">
@@ -34,10 +34,10 @@
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
         <div class="third-line">для автомоек самообслуживания</div>
-      </div><a href="#start" class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></a>
+      </div><a href="#section-business" class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></a>
     </div>
   </div>
-  <div id="start" class="section business">
+  <div id="secttion-business" class="section business">
     <div class="container">
       <div class="block">
         <div class="text left">
