Страница 0.5 - начался фидбэк. Выпилено меню в шапке.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,6 @@
 <body>
   <div id="section-start" class="section start">
     <div class="container">
-      <div class="logo"><img src="../pics/section.start.logo.png"></div>
-      <div class="menu">
-        <ul class="part">
-          <li><a href="#start">Автомойки</a></li>
-          <li><a href="#start">Конструкции</a></li>
-          <li><a href="#start">Аксессуары</a></li>
-          <li><a href="#start">Автоматы</a></li>
-          <li><a href="#start">Химия</a></li>
-          <li><a href="#start">Сервис</a></li>
-        </ul>
-        <ul class="part">
-          <li><a href="#start">Компания</a></li>
-          <li><a href="#start">Контакты</a></li>
-        </ul>
-      </div>
-      <div class="lang"><a href="#start">EN</a></div>
       <div class="text">
         <div class="first-line">оборудование класса</div>
         <div class="second-line">premium</div>
@@ -37,7 +21,7 @@
       </div><a href="#section-business" class="arrow smoothScroll"><img src="../pics/section.start.arrow.svg"></a>
     </div>
   </div>
-  <div id="secttion-business" class="section business">
+  <div id="section-business" class="section business">
     <div class="container">
       <div class="block">
         <div class="text left">
