Страница 0.5.5 - убрал перетекание линзы в слайдшоу

--- a/index.html
+++ b/index.html
@@ -101,15 +101,18 @@
         <div class="content round round-1 car-active"></div>
         <div class="content round round-2"></div>
         <div class="content round round-3"></div>
+        <div class="content round round-4"></div>
         <div class="content car-shadow"></div>
-        <div class="content car car-4"></div>
+        <div class="content car car-4 car-active"></div>
         <div class="content car car-3"></div>
         <div class="content car car-2"></div>
-        <div class="content car car-1"></div>
+        <div class="content car car-1 car-active"></div>
       </div>
       <div class="info-bottom-cont">
-        <div class="bottom-left">
-          <div class="text">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
+        <div class="bottom-left-cont">
+          <div class="bottom-left">
+            <div class="text">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
+          </div>
         </div>
         <div class="bottom-right-cont">
           <div class="bottom-right bottom-right-1-1 car-active"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
@@ -165,41 +168,41 @@
         <div class="block parts">
           <table class="parts">
             <tr>
-              <td>
+              <td class="part-led">
                 <div class="caption">LED-подсветка</div>
                 <p>Обладает высокой яркостью</p>
               </td>
-              <td>
+              <td class="part-head">
                 <div class="caption">Брендированная шапка</div>
                 <p>в цвет стиля фриза конструкции</p>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="part-keys">
                 <div class="caption">Интерактивные клавиши</div>
                 <p>С пыле- и влагозащитой</p>
               </td>
-              <td>
+              <td class="part-pause">
                 <div class="caption">Кнопка «Стоп / Пауза»</div>
                 <p>для более удобного использования</p>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="part-display">
                 <div class="caption">Настраиваемый дисплей</div>
                 <p>Отображение времени или денег</p>
               </td>
-              <td>
+              <td class="part-case">
                 <div class="caption">Вандалоустойчивый корпус</div>
                 <p>из нержавеющей стали</p>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="part-pay">
                 <div class="caption">Удобная система оплаты</div>
                 <p>Купюры, монеты, жетоны</p>
               </td>
-              <td>
+              <td class="part-heat">
                 <div class="caption">Система подогрева</div>
                 <p>пультов управления</p>
               </td>
