--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
     </div>
     <div class="container">
       <div class="program-cont">
-        <div class="program program1 car-active">Первая программа</div>
-        <div class="program program2">Вторая программа</div>
-        <div class="program program3">Третья программа</div>
-        <div class="program program4">Четвертая программа</div>
+        <div class="program program1 car-element-passive car-element-active">Первая программа</div>
+        <div class="program program2 car-element-passive">Вторая программа</div>
+        <div class="program program3 car-element-passive">Третья программа</div>
+        <div class="program program4 car-element-passive">Четвертая программа</div>
       </div>
       <div class="info-cont">
-        <div class="info info-2"><img src="../pics/section.main_car_animation.meter.png">
+        <div class="info info-2 car-element-passive"><img src="../pics/section.main_car_animation.meter.png">
           <p>Максимальное давление</p>
           <p>150 бар</p>
         </div>
-        <div class="info info-3">
+        <div class="info info-3 car-element-passive">
           <p>Клиент наносит горячий полимерный воск <strong>MagicWax</strong>. В умягченную воду, подогретую до 40° С, при помощи точной системы дозации DigitalBatching дозируется полиморный воск и подается на пистолет под давлением до 150 бар.</p>
         </div>
-        <div class="info info-4">
+        <div class="info info-4 car-element-passive">
           <p>Используется вода, очищенная от солей и минералов. Очищение происходит в процессе обратного осмоса, что позволяет получить воду практически без примесей.</p>
           <p>И соответственно, такая вода не будет оставлять подтеков и разводов на поверхности автомобиля.</p>
         </div>
-        <div class="info info-1 car-active">
+        <div class="info info-1 car-element-passive car-element-active">
           <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
           <div class="button btn1 button-active">Активная пена</div>
           <div class="button btn2">Активный шампунь</div>
@@ -98,38 +98,38 @@
       </div>
       <div class="content-container">
         <div class="content cleaner"></div>
-        <div class="content round round-1 car-active"></div>
+        <div class="content round round-1 car-passive car-active"></div>
         <div class="content round round-2"></div>
         <div class="content round round-3"></div>
         <div class="content round round-4"></div>
         <div class="content car-shadow"></div>
         <div class="content car car-4 car-active"></div>
-        <div class="content car car-3"></div>
-        <div class="content car car-2"></div>
-        <div class="content car car-1 car-active"></div>
+        <div class="content car car-3 car-passive"></div>
+        <div class="content car car-2 car-passive"></div>
+        <div class="content car car-1 car-passive car-active"></div>
       </div>
       <div class="info-bottom-cont">
         <div class="bottom-left-cont">
-          <div class="bottom-left">
+          <div class="bottom-left car-element-passive">
             <div class="text">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
           </div>
         </div>
         <div class="bottom-right-cont">
-          <div class="bottom-right bottom-right-1-1 car-active"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
+          <div class="bottom-right bottom-right-1-1 car-element-passive car-element-active"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
             <div class="title">MagicActiveFoаm</div>
             <div class="text">Благодаря своей густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
           </div>
-          <div class="bottom-right bottom-right-1-2"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
+          <div class="bottom-right bottom-right-1-2 car-element-passive"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
             <div class="title">MagicActiveShampoo</div>
             <div class="text">А это офигенный продающий текст про шампунь.</div>
           </div>
-          <div class="bottom-right bottom-right-2"><img src="../pics/section.main_car_animation.temp.png">
+          <div class="bottom-right bottom-right-2 car-element-passive"><img src="../pics/section.main_car_animation.temp.png">
             <div class="text">В холодный период эксплуатации интеллектуальная система InVision автоматически переключает подачу воды на теплую, таким образом предвосхищая ожидание клиента.</div>
           </div>
-          <div class="bottom-right bottom-right-3"><img src="../pics/section.main_car_animation.sparks.png">
+          <div class="bottom-right bottom-right-3 car-element-passive"><img src="../pics/section.main_car_animation.sparks.png">
             <div class="text">Лакокрасочной поверхности автомобиля придается дополнительный блеск, а капли воды стекают с кузова. Также при следующей мойке автомобиль гораздо легче отмыть от загрязнений.</div>
           </div>
-          <div class="bottom-right bottom-right-4"><img src="../pics/section.main_car_animation.fan.png">
+          <div class="bottom-right bottom-right-4 car-element-passive"><img src="../pics/section.main_car_animation.fan.png">
             <div class="text">Для получения безупречного эффекта от мойки в целом, система <strong>DigitalBathing</strong> добавляет в деминерализованную воду немного осущающего раствора.</div>
           </div>
         </div>
