--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta name="viewport" content="width=768">
+  <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
