Страница 0.6.5. Вариант для Айпада.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </div>
       </div>
     </div>
+    <div class="ipad-scroll"><img src="../pics/section.slideshow.arrow.svg" class="prev scroll-btn scroll-btn-inactive"><img src="../pics/section.slideshow.arrow.svg" class="next scroll-btn"></div>
   </div>
   <div class="section pause">
     <div class="container">
