Кнопки скролла на слайдшоу, другие фиксы.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="carwashes__ipad-scroll"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__prev carwashes__scroll-btn carwashes__scroll-btn-inactive"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__next carwashes__scroll-btn"></div>
+    <div class="carwashes__ipad-scroll"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__scroll-btn-prev carwashes__scroll-btn carwashes__scroll-btn-inactive"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__scroll-btn-next carwashes__scroll-btn"></div>
   </div>
   <div class="carwashes__section carwashes__pause">
     <div class="carwashes__container">
@@ -235,9 +235,7 @@
             <div class="carwashes__pic carwashes__pic-2"></div>
             <div class="carwashes__pic carwashes__pic-3"></div>
           </div>
-        </div>
-        <div class="carwashes__prev carwashes__btn"></div>
-        <div class="carwashes__next carwashes__btn"></div>
+        </div><img src="../pics/section.slideshow.arrow.svg" class="carwashes__prev carwashes__btn"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__next carwashes__btn">
       </div>
     </div>
   </div>
