--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
   <script src="javascripts/app.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/plugins/debug.addIndicators.min.js"></script>
+  <!--script(src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.2/plugins/debug.addIndicators.min.js")-->
   <script>
     require('initialize');
     
@@ -68,34 +68,34 @@
     </div>
   </div>
   <div id="carwashes__car-screen" class="carwashes__section carwashes__main_car_animation">
-    <div class="carwashes__caption carwashes__caption1">Мойка</div>
-    <div class="carwashes__caption carwashes__caption2">Ополаскивание</div>
-    <div class="carwashes__caption carwashes__caption3">Полировка</div>
-    <div class="carwashes__caption carwashes__caption4">Ополаскивание
+    <div class="carwashes__caption carwashes__caption_1">Мойка</div>
+    <div class="carwashes__caption carwashes__caption_2">Ополаскивание</div>
+    <div class="carwashes__caption carwashes__caption_3">Горячий воск</div>
+    <div class="carwashes__caption carwashes__caption_4">Ополаскивание
       <div class="carwashes__comment">Деминерализованной водой</div>
     </div>
     <div class="carwashes__container">
       <div class="carwashes__program-cont">
-        <div class="carwashes__program carwashes__program1 carwashes__car-element-passive carwashes__car-element-active">Первая программа</div>
-        <div class="carwashes__program carwashes__program2 carwashes__car-element-passive">Вторая программа</div>
-        <div class="carwashes__program carwashes__program3 carwashes__car-element-passive">Третья программа</div>
-        <div class="carwashes__program carwashes__program4 carwashes__car-element-passive">Четвертая программа</div>
+        <div class="carwashes__program carwashes__program_1 carwashes__car-element-passive carwashes__car-element-active">Первая программа</div>
+        <div class="carwashes__program carwashes__program_2 carwashes__car-element-passive">Вторая программа</div>
+        <div class="carwashes__program carwashes__program_3 carwashes__car-element-passive">Третья программа</div>
+        <div class="carwashes__program carwashes__program_4 carwashes__car-element-passive carwashes__car-element-passive-r">Четвертая программа</div>
       </div>
       <div class="carwashes__info-cont">
-        <div class="carwashes__info carwashes__info-2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.meter.png">
+        <div class="carwashes__info carwashes__info_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.meter.png">
           <p>Максимальное давление</p>
           <p>150 бар</p>
         </div>
-        <div class="carwashes__info carwashes__info-3 carwashes__car-element-passive">
+        <div class="carwashes__info carwashes__info_3 carwashes__car-element-passive">
           <p>Клиент наносит горячий полимерный воск <strong>MagicWax</strong>. В умягченную воду, подогретую до 40° С, при помощи точной системы дозации DigitalBatching дозируется полиморный воск и подается на пистолет под давлением до 150 бар.</p>
         </div>
-        <div class="carwashes__info carwashes__info-4 carwashes__car-element-passive">
+        <div class="carwashes__info carwashes__info_4 carwashes__car-element-passive carwashes__car-element-passive-r">
           <p>Используется вода, очищенная от солей и минералов. Очищение происходит в процессе обратного осмоса, что позволяет получить воду практически без примесей.</p>
           <p>И соответственно, такая вода не будет оставлять подтеков и разводов на поверхности автомобиля.</p>
         </div>
-        <div class="carwashes__info carwashes__info-1 carwashes__car-element-passive carwashes__car-element-active">
+        <div class="carwashes__info carwashes__info_1 carwashes__car-element-passive carwashes__car-element-active">
           <p>На этой программе клиент вправе выбрать, каким способом вымыть автомобиль.</p>
-          <div class="carwashes__button carwashes__btn1 carwashes__button-active">Активная пена</div>
+          <div class="carwashes__button carwashes__btn1">Активная пена</div>
           <div class="carwashes__button carwashes__btn2">Активный шампунь</div>
         </div>
       </div>
@@ -113,26 +113,26 @@
       </div>
       <div class="carwashes__info-bottom-cont">
         <div class="carwashes__bottom-left-cont">
-          <div class="carwashes__bottom-left carwashes__car-element-passive">
+          <div class="carwashes__bottom-left carwashes__car-element-passive carwashes__car-element-passive-r">
             <div class="carwashes__text">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
           </div>
         </div>
         <div class="carwashes__bottom-right-cont">
-          <div class="carwashes__bottom-right carwashes__bottom-right-1-1 carwashes__car-element-passive carwashes__car-element-active"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
+          <div class="carwashes__bottom-right carwashes__bottom-right_1_item carwashes__bottom-right_1_1 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
             <div class="carwashes__title">MagicActiveFoаm</div>
             <div class="carwashes__text">Благодаря своей густой формуле, словно взбитые сливки, пена равномерно ложится на всю поверхность автомобиля, превосходно отмывая все загрязнения, в том числе дорожную масляную пленку и следы от насекомых.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right-1-2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
+          <div class="carwashes__bottom-right carwashes__bottom-right_1_item carwashes__bottom-right_1_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.bottom.1.svg" height="70">
             <div class="carwashes__title">MagicActiveShampoo</div>
             <div class="carwashes__text">А это офигенный продающий текст про шампунь.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right-2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.temp.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.temp.png">
             <div class="carwashes__text">В холодный период эксплуатации интеллектуальная система InVision автоматически переключает подачу воды на теплую, таким образом предвосхищая ожидание клиента.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right-3 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.sparks.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_3 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.sparks.png">
             <div class="carwashes__text">Лакокрасочной поверхности автомобиля придается дополнительный блеск, а капли воды стекают с кузова. Также при следующей мойке автомобиль гораздо легче отмыть от загрязнений.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right-4 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.fan.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_4 carwashes__car-element-passive carwashes__car-element-passive-r"><img src="../pics/section.main_car_animation.fan.png">
             <div class="carwashes__text">Для получения безупречного эффекта от мойки в целом, система <strong>DigitalBathing</strong> добавляет в деминерализованную воду немного осущающего раствора.</div>
           </div>
         </div>
