--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div id="carwashes__car-screen" class="carwashes__section carwashes__main_car_animation">
     <div class="carwashes__caption carwashes__caption_1">Мойка</div>
     <div class="carwashes__caption carwashes__caption_2">Ополаскивание</div>
-    <div class="carwashes__caption carwashes__caption_3">Горячий воск</div>
+    <div class="carwashes__caption carwashes__caption_3">Горячий&nbspвоск</div>
     <div class="carwashes__caption carwashes__caption_4">Ополаскивание
       <div class="carwashes__comment">Деминерализованной водой</div>
     </div>
@@ -82,7 +82,7 @@
         <div class="carwashes__program carwashes__program_4 carwashes__car-element-passive carwashes__car-element-passive-r">Четвертая программа</div>
       </div>
       <div class="carwashes__info-cont">
-        <div class="carwashes__info carwashes__info_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.meter.png">
+        <div class="carwashes__info carwashes__info_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.meter.svg">
           <p>Максимальное давление</p>
           <p>150 бар</p>
         </div>
@@ -106,8 +106,8 @@
         <div class="carwashes__content carwashes__round carwashes__round-3"></div>
         <div class="carwashes__content carwashes__round carwashes__round-4"></div>
         <div class="carwashes__content carwashes__car-shadow"></div>
-        <div class="carwashes__content carwashes__car carwashes__car-4 carwashes__car-active"></div>
-        <div class="carwashes__content carwashes__car carwashes__car-3 carwashes__car-passive"></div>
+        <div class="carwashes__content carwashes__car carwashes__car-3 carwashes__car-active"></div>
+        <div class="carwashes__content carwashes__car carwashes__car-4 carwashes__car-passive"></div>
         <div class="carwashes__content carwashes__car carwashes__car-2 carwashes__car-passive"></div>
         <div class="carwashes__content carwashes__car carwashes__car-1 carwashes__car-passive carwashes__car-active"></div>
       </div>
@@ -126,13 +126,13 @@
             <div class="carwashes__title">MagicActiveShampoo</div>
             <div class="carwashes__text">А это офигенный продающий текст про шампунь.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.temp.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.temp.svg">
             <div class="carwashes__text">В холодный период эксплуатации интеллектуальная система InVision автоматически переключает подачу воды на теплую, таким образом предвосхищая ожидание клиента.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right_3 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.sparks.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_3 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.sparks.svg">
             <div class="carwashes__text">Лакокрасочной поверхности автомобиля придается дополнительный блеск, а капли воды стекают с кузова. Также при следующей мойке автомобиль гораздо легче отмыть от загрязнений.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right_4 carwashes__car-element-passive carwashes__car-element-passive-r"><img src="../pics/section.main_car_animation.fan.png">
+          <div class="carwashes__bottom-right carwashes__bottom-right_4 carwashes__car-element-passive carwashes__car-element-passive-r"><img src="../pics/section.main_car_animation.fan.svg">
             <div class="carwashes__text">Для получения безупречного эффекта от мойки в целом, система <strong>DigitalBathing</strong> добавляет в деминерализованную воду немного осущающего раствора.</div>
           </div>
         </div>
@@ -215,7 +215,7 @@
         </div>
       </div>
     </div>
-    <div class="carwashes__block carwashes__cleaner"><img src="../pics/section.pults.cleaner.png"></div>
+    <div class="carwashes__block carwashes__cleaner"><img src="../pics/section.pults.base.png" class="carwashes__img_base"><img src="../pics/section.pults.led.png" class="carwashes__img_part carwashes__img_part_0"><img src="../pics/section.pults.head.png" class="carwashes__img_part carwashes__img_part_1"><img src="../pics/section.pults.keys.png" class="carwashes__img_part carwashes__img_part_2"><img src="../pics/section.pults.pause.png" class="carwashes__img_part carwashes__img_part_3"><img src="../pics/section.pults.display.png" class="carwashes__img_part carwashes__img_part_4"><img src="../pics/section.pults.case.png" class="carwashes__img_part carwashes__img_part_5"><img src="../pics/section.pults.pay.png" class="carwashes__img_part carwashes__img_part_6"><img src="../pics/section.pults.heat.png" class="carwashes__img_part carwashes__img_part_7"></div>
   </div>
   <div id="carwashes__slideshow" class="carwashes__section carwashes__slideshow">
     <div class="carwashes__container">
@@ -234,6 +234,9 @@
             <div class="carwashes__pic carwashes__pic-1"></div>
             <div class="carwashes__pic carwashes__pic-2"></div>
             <div class="carwashes__pic carwashes__pic-3"></div>
+            <div class="carwashes__pic carwashes__pic-4"></div>
+            <div class="carwashes__pic carwashes__pic-5"></div>
+            <div class="carwashes__pic carwashes__pic-6"></div>
           </div>
         </div><img src="../pics/section.slideshow.arrow.svg" class="carwashes__prev carwashes__btn"><img src="../pics/section.slideshow.arrow.svg" class="carwashes__next carwashes__btn">
       </div>
@@ -254,17 +257,10 @@
         <div class="carwashes__button carwashes__btn1">Заказать</div>
         <div class="carwashes__button carwashes__btn2">Посмотреть контакты</div>
       </div>
-      <div class="carwashes__block carwashes__menu">
-        <div class="carwashes__menu carwashes__item"><img src="../pics/section.request.circle.svg">
-          <p>Бизнес-стратегия</p>
-        </div>
-        <div class="carwashes__menu carwashes__item"><img src="../pics/section.request.circle.svg">
-          <p>Этап строительства</p>
-        </div>
-        <div class="carwashes__menu carwashes__item"><img src="../pics/section.request.circle.svg">
-          <p>Комплект поставки</p>
-        </div>
-      </div>
+      <div class="carwashes__block carwashes__menu"><a class="carwashes__item carwashes__item_1"><img src="../pics/section.request.horse.svg"><img src="../pics/section.request.horse_red.svg" class="red">
+          <p>Бизнес-стратегия</p></a><a class="carwashes__item carwashes__item_2"><img src="../pics/section.request.tool.svg"><img src="../pics/section.request.tool_red.svg" class="red">
+          <p>Этап строительства</p></a><a class="carwashes__item carwashes__item_3"><img src="../pics/section.request.set.svg"><img src="../pics/section.request.set_red.svg" class="red">
+          <p>Комплект поставки</p></a></div>
     </div>
   </div>
   <!--.carwashes__section.carwashes__bottom_menu
