Убил анимацию влево-вправо на десктопе.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="carwashes__program carwashes__program_1 carwashes__car-element-passive carwashes__car-element-active">Первая программа</div>
         <div class="carwashes__program carwashes__program_2 carwashes__car-element-passive">Вторая программа</div>
         <div class="carwashes__program carwashes__program_3 carwashes__car-element-passive">Третья программа</div>
-        <div class="carwashes__program carwashes__program_4 carwashes__car-element-passive carwashes__car-element-passive-r">Четвертая программа</div>
+        <div class="carwashes__program carwashes__program_4 carwashes__car-element-passive">Четвертая программа</div>
       </div>
       <div class="carwashes__info-cont">
         <div class="carwashes__info carwashes__info_2 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.meter.svg">
@@ -89,7 +89,7 @@
         <div class="carwashes__info carwashes__info_3 carwashes__car-element-passive">
           <p>Клиент наносит горячий полимерный воск <strong>MagicWax</strong>. В умягченную воду, подогретую до 40° С, при помощи точной системы дозации DigitalBatching дозируется полиморный воск и подается на пистолет под давлением до 150 бар.</p>
         </div>
-        <div class="carwashes__info carwashes__info_4 carwashes__car-element-passive carwashes__car-element-passive-r">
+        <div class="carwashes__info carwashes__info_4 carwashes__car-element-passive">
           <p>Используется вода, очищенная от солей и минералов. Очищение происходит в процессе обратного осмоса, что позволяет получить воду практически без примесей.</p>
           <p>И соответственно, такая вода не будет оставлять подтеков и разводов на поверхности автомобиля.</p>
         </div>
@@ -113,7 +113,7 @@
       </div>
       <div class="carwashes__info-bottom-cont">
         <div class="carwashes__bottom-left-cont">
-          <div class="carwashes__bottom-left carwashes__car-element-passive carwashes__car-element-passive-r">
+          <div class="carwashes__bottom-left carwashes__car-element-passive">
             <div class="carwashes__text">Опционально 4-я программа может использовать горячую деминерализованную воду.</div>
           </div>
         </div>
@@ -132,7 +132,7 @@
           <div class="carwashes__bottom-right carwashes__bottom-right_3 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.sparks.svg">
             <div class="carwashes__text">Лакокрасочной поверхности автомобиля придается дополнительный блеск, а капли воды стекают с кузова. Также при следующей мойке автомобиль гораздо легче отмыть от загрязнений.</div>
           </div>
-          <div class="carwashes__bottom-right carwashes__bottom-right_4 carwashes__car-element-passive carwashes__car-element-passive-r"><img src="../pics/section.main_car_animation.fan.svg">
+          <div class="carwashes__bottom-right carwashes__bottom-right_4 carwashes__car-element-passive"><img src="../pics/section.main_car_animation.fan.svg">
             <div class="carwashes__text">Для получения безупречного эффекта от мойки в целом, система <strong>DigitalBathing</strong> добавляет в деминерализованную воду немного осущающего раствора.</div>
           </div>
         </div>
